# ControlPanel

./: .gitignore  FEATURES.md  PLAN.md  README.md  TODO.md  a.patch
.kilocode/: mcp.json
backend/: CMakeLists.txt  README.md  config.json
backend/certs/: localhost+2-key.pem  localhost+2.pem  server.crt  server.key
backend/cmake/: aarch64-toolchain.cmake
backend/data/: settings.json
backend/include/app/: server_app.h
backend/include/controllers/: auth_controller.h  chat_controller.h  config_controller.h  generation_task_manager.h  lmstudio_controller.h  mcp_controller.h  openrouter_controller.h  vault_controller.h
backend/include/server/: api_routes.h  http_utils.h
backend/include/services/: backend_builder.h  crypto_service.h  huggingface_service.h  llama_api.h  llamacpp_instance_registry.h  llamacpp_service.h  lmstudio_service.h  mcp_client.h  mcp_registry.h  mcp_service.h  mcp_stdio_client.h  openrouter_service.h  rate_limiter.h
backend/include/services/tools/: assistant_workspace_tool.h  calculator_tool.h  cli_tool.h  file_edit_tool.h  file_reader_tool.h  filesystem_tool.h  internet_testing_tool.h  local_ecosystem_tool.h  tool_argument_validator.h  tool_system.h  weather_tool.h  web_search_tool.h
backend/include/utils/: encryption.h
backend/scripts/: build.sh  embed_directory.py  embed_frontend.py  generator.cpp  package_firefox_extension.py  setup.sh
backend/src/: main.cpp
backend/src/app/: server_app.cpp
backend/src/config/: config.h
backend/src/controllers/: auth_controller.cpp  chat_controller.cpp  config_controller.cpp  generation_task_manager.cpp  lmstudio_controller.cpp  mcp_controller.cpp  openrouter_controller.cpp  vault_controller.cpp
backend/src/server/: api_routes.cpp  http_utils.cpp
backend/src/services/: backend_builder.cpp  crypto_service.cpp  huggingface_service.cpp  llamacpp_instance_registry.cpp  llamacpp_service.cpp  lmstudio_service.cpp  mcp_client.cpp  mcp_registry.cpp  mcp_service.cpp  mcp_stdio_client.cpp  openrouter_service.cpp
backend/src/services/tools/: assistant_workspace_tool.cpp  calculator_tool.cpp  cli_tool.cpp  file_edit_tool.cpp  file_reader_tool.cpp  filesystem_tool.cpp  internet_testing_tool.cpp  local_ecosystem_tool.cpp  tool_argument_validator.cpp  tool_system.cpp  weather_tool.cpp  web_search_tool.cpp
backend/src/tests/: auth_test.cpp  auth_vault_test.cpp  file_reader_tool_test.cpp  filesystem_tool_test.cpp  tool_system_test.cpp  web_search_tool_test.cpp
backend/src/utils/: encryption.cpp
backend/toolpacks/assistant_workspace/: pack.json
backend/toolpacks/assistant_workspace/tools/: chat_notes.json  todo_list.json
backend/toolpacks/calculator/: pack.json
backend/toolpacks/calculator/tools/: calculate.json  calculate_batch.json
backend/toolpacks/cli/: pack.json
backend/toolpacks/cli/tools/: run_command.json
backend/toolpacks/file_reader/: pack.json
backend/toolpacks/file_reader/tools/: read_file.json
backend/toolpacks/filesystem/: pack.json
backend/toolpacks/filesystem/tools/: change_working_directory.json  directory_tree.json  edit_file.json  get_working_directory.json  list_directory.json
backend/toolpacks/internet_testing/: pack.json
backend/toolpacks/internet_testing/tools/: test_internet_connection.json
backend/toolpacks/local_ecosystem/: pack.json
backend/toolpacks/local_ecosystem/tools/: inspect_local_ecosystem.json
backend/toolpacks/weather/: pack.json
backend/toolpacks/weather/tools/: get_weather.json
backend/toolpacks/websearch/: pack.json
backend/toolpacks/websearch/tools/: fetch_url.json  open_result.json  related_results.json  search_status.json  search_web.json
ctrlpanel/: index.html
ctrlpanel/css/: base.css  chat.css  connection-monitor.css  content.css  layout.css  sidebar.css
ctrlpanel/js/: api.js  app.js  backend-suggest.js  browser-detect.js  chat.js  connection-monitor.js  connection-ui.js  demo-mode.js  router.js  settings-store.js  theme.js
ctrlpanel/js/chat/: chat-page.js  context.js  graph.js  inline-attachment.js  latex.js  markdown.js  sidebar.js  store.js  thread-ui.js
ctrlpanel/pages/: ai-chat.html  home.html  settings.html
dev/: dump.py  project.json  project.md
extensions/firefox/ctrlpanel-passwords/: manifest.json
plans/: backend-implementation-plan.md  chat-rename-click-outside-plan.md  inline-attachments-plan.md
scripts/: config.ini  dump  smoke.sh
www/: index.html  login.html
www/assets/scripts/: dump.py
www/css/: base.css  bibliography.css  chat.css  components.css  connection-monitor.css  content.css  cursor.css  latex.css  layout.css  login.css  settings.css  sidebar.css  space-missions.css  theme.css  transitions.css  util.css  variables.css  viewer.css
www/css/components/: connection-monitor.css  sidebar.css
www/css/core/: base.css  layout.css
www/css/pages/: login.css  password-manager.css  settings.css
www/js/: api.js  app.js  auth.js  availability.js  backend-suggest.js  browser-detect.js  connection-monitor.js  connection-ui.js  cursor.js  keyboard.js  ladybird.js  login.js  main.js  model-manager.js  nav-indicator.js  photos.js  projects.js  router.js  settings-store.js  snippets.js  theme.js  ux.js
www/js/boot/: login.js  main.js
www/js/chat/: chat-page.js  context.js  generation.js  index.js  inline-attachment.js  latex.js  markdown.js  sidebar.js  store.js  thread-ui.js  token-highlighting.js  toolbar.js  util.js
www/js/core/: dispose.js  dom.js  events.js  fragment-loader.js  http.js  router.js  storage.js
www/js/latex/: index.js
www/js/pages/: home.js  password-manager.js
www/js/render/: colours.js  markdown.js  message.js  token-highlighting.js
www/js/services/: auth.js  backend-suggest.js  connection.js  idle-lock.js  secret-dialog.js  settings.js  vault-crypto.js  vault.js
www/js/settings/: page.js
www/js/shell/: app-shell.js  navigation.js  sidebar.js
www/js/space-missions/: data.js  index.js
www/pages/: about.html  ai-chat.html  code.html  home.html  password-manager.html  photos.html  research.html  settings.html  space-missions.html  work.html
(+85 files in other folders)
